--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://www.quicheanon.com/"
+baseurl = "http://www.quicheanon.com/"
 languageCode = "en-us"
 title = "Quiche-Anon"
 theme = "castanet"
