--- a/config.toml
+++ b/config.toml
@@ -55,14 +55,14 @@ disqusShortname = ""
   [params.feed]
     copyright = "Copyright 2020 Quiche-Anon" #do not use markdown in this field; it is used in the feed
     itunes_subtitle = "The best podcast ever" #no markdown or HTML
-    itunes_author = "Matt Stratton" #no markdown or HTML
+    itunes_author = "Kelli Prichard and Matt Stratton" #no markdown or HTML
     itunes_summary = "The HugoCast is the best podcast you've ever seen. You will learn everything you ever needed to know about podcasting from the most inspiring experts to ever show up on the whole internet." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Matt Stratton"
     itunes_owner_email = "matt.stratton@gmail.com" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on Apple Podcasts. It will not be publicly displayed on Apple Podcasts.
     itunes_image = "https://www.arresteddevops.com/img/ado-podcast-logo.png" #fqdn to the image art for your podcast
-    itunes_top_category = "Technology"
-    itunes_first_sub_category = "Software How-To"
-    itunes_second_sub_category = "Tech News"
+    itunes_top_category = "Talk Radio"
+    # itunes_first_sub_category = "Software How-To"
+    # itunes_second_sub_category = "Tech News"
     language = "en-us"
 
   [params.realfavicongenerator] # https://realfavicongenerator.net/
@@ -97,21 +97,9 @@ disqusShortname = ""
         twitter = "mattstratton"
         linkedin = "mattstratton"
         homepage = "https://www.mattstratton.com"
-        pinterest = "mattstratton"
         instagram = "instagram"
-        youtube = "mattstratton"
         twitch = "mattstratton"
     [params.authors.Kelli]
         name = "Kelli Prichard"
         thumbnail = "img/host/kelli.jpg"
-
-    [params.links]
-      [params.links.ado]
-        name = "Arrested DevOps"
-        url = "https://www.arresteddevops.com"
-      [params.links.ffs]
-        name = "Food Fight Show"
-        url = "https://foodfightshow.org"
-      [params.links.sdt]
-        name = "Software Defined Talk"
-        url = "https://cote.io/podcasts/sdt/"
+        twitter = "allaboutkelli"
