--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/qui
 disqusShortname = ""
   [params.feed]
     copyright = "Copyright 2020 Quiche-Anon" #do not use markdown in this field; it is used in the feed
-    itunes_subtitle = "The best podcast ever" #no markdown or HTML
+    itunes_subtitle = "A podcast about conspiracy theories and cooking" #no markdown or HTML
     itunes_author = "Kelli Prichard and Matt Stratton" #no markdown or HTML
     itunes_summary = "The HugoCast is the best podcast you've ever seen. You will learn everything you ever needed to know about podcasting from the most inspiring experts to ever show up on the whole internet." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Matt Stratton"
