--- a/config.toml
+++ b/config.toml
@@ -38,7 +38,7 @@ site_layout = "row"
 enable_jumbo = "true"
 # enable_jumbo = "false"
 # truncate = "100"
-about_logo = "/img/quiche.jpg"
+about_logo = "/img/quiche-anon-logo-500.jpg"
 copyright_notice = "Copyright 2020 [Quiche-Anon](https://www.quicheanon.com)"
 # itunes_subscribe = "https://podcasts.apple.com/us/podcast/arrested-devops/id773888088?ign-mpt=uo%3D4&mt=2"
 # android_subscribe = "http://subscribeonandroid.com/feeds.podtrac.com/VGAulpN7MY1U"
@@ -59,7 +59,7 @@ disqusShortname = ""
     itunes_summary = "The HugoCast is the best podcast you've ever seen. You will learn everything you ever needed to know about podcasting from the most inspiring experts to ever show up on the whole internet." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Matt Stratton"
     itunes_owner_email = "matt.stratton@gmail.com" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on Apple Podcasts. It will not be publicly displayed on Apple Podcasts.
-    itunes_image = "https://www.arresteddevops.com/img/ado-podcast-logo.png" #fqdn to the image art for your podcast
+    itunes_image = "https://www.quicheanon.com/img/quiche-anon-logo-big.png" #fqdn to the image art for your podcast
     itunes_top_category = "News - News Commentary"
     # itunes_first_sub_category = "Software How-To"
     # itunes_second_sub_category = "Tech News"
