--- a/config.toml
+++ b/config.toml
@@ -38,6 +38,7 @@ site_layout = "row"
 enable_jumbo = "true"
 # enable_jumbo = "false"
 # truncate = "100"
+favicon = "favicon.ico"
 about_logo = "/img/quiche-anon-logo-500.jpg"
 copyright_notice = "Copyright 2020 [Quiche-Anon](https://www.quicheanon.com)"
 # itunes_subscribe = "https://podcasts.apple.com/us/podcast/arrested-devops/id773888088?ign-mpt=uo%3D4&mt=2"
