--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ paginate = "9"
   [markup.goldmark]
     [markup.goldmark.renderer]
     unsafe = true
-    
+
 # The theme supports menus with up to one submenu per menu item
 # The menu name must be "Main"
 # The menus are sorted based upon their identifier
@@ -54,14 +54,14 @@ copyright_notice = "Copyright 2020 [Quiche-Anon](https://www.quicheanon.com)"
 # pocketcasts_subscribe = "http://pcasts.in/feed/feeds.soundcloud.com/users/soundcloud:users:203144248/sounds.rss"
 # mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
-description = "A podcast about conspiracy theories and cooking. More words about the show! We talk about stuff and it's funny, so you should listen to this show or else you won't be cool."
+description = "A podcast about conspiracy theories and cooking. Hosts Kelli and Matt will take you on a journey through the deepest, darkest paths of conspiracy theories - mixed in with their takes on what makes food amazing and delicious."
 media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/quicheanon/"
 disqusShortname = ""
   [params.feed]
     copyright = "Copyright 2020 Quiche-Anon" #do not use markdown in this field; it is used in the feed
     itunes_subtitle = "A podcast about conspiracy theories and cooking" #no markdown or HTML
     itunes_author = "Kelli Prichard and Matt Stratton" #no markdown or HTML
-    itunes_summary = "The HugoCast is the best podcast you've ever seen. You will learn everything you ever needed to know about podcasting from the most inspiring experts to ever show up on the whole internet." # Limited to 4000 characters or less, plain text, no HTML
+    itunes_summary = "Hosts Kelli and Matt talk about their favorite conspiracy theories, as well as favorite recipes and cooking tips. A delightful mix of conspiracy and cooking." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Matt Stratton"
     itunes_owner_email = "matt.stratton@gmail.com" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on Apple Podcasts. It will not be publicly displayed on Apple Podcasts.
     itunes_image = "https://www.quicheanon.com/img/quiche-anon-logo-big.png" #fqdn to the image art for your podcast
