--- a/config.toml
+++ b/config.toml
@@ -64,7 +64,7 @@ disqusShortname = ""
     itunes_summary = "Hosts Kelli and Matt talk about their favorite conspiracy theories, as well as favorite recipes and cooking tips. A delightful mix of conspiracy and cooking." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Matt Stratton"
     itunes_owner_email = "matt.stratton@gmail.com" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on Apple Podcasts. It will not be publicly displayed on Apple Podcasts.
-    itunes_image = "https://www.quicheanon.com/img/quiche-anon-logo-big.png" #fqdn to the image art for your podcast
+    itunes_image = "https://www.quicheanon.com/img/quiche-anon-logo-big.jpg" #fqdn to the image art for your podcast
     itunes_top_category = "News"
     itunes_first_sub_category = "News Commentary"
     # itunes_second_sub_category = "Tech News"
