--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ favicon = "favicon.ico"
 about_logo = "/img/quiche-anon-logo-500.jpg"
 copyright_notice = "Copyright 2020 [Quiche-Anon](https://www.quicheanon.com)"
 # itunes_subscribe = "https://podcasts.apple.com/us/podcast/arrested-devops/id773888088?ign-mpt=uo%3D4&mt=2"
-# android_subscribe = "http://subscribeonandroid.com/feeds.podtrac.com/VGAulpN7MY1U"
+android_subscribe = "https://www.subscribeonandroid.com/feeds.blubrry.com/feeds/quicheanon.xml"
 # spotify_subscribe = "https://open.spotify.com/show/..."
 # google_play_subscribe = "https://goo.gl/app/playmusic?ibi=com.google.PlayMusic&isi=691797987&ius=googleplaymusic&link=https://play.google.com/music/m/Ihj4yege3lfmp3vs5yoopgxijpi?t%3DArrested_DevOps"
 # stitcher_subscribe = "http://www.stitcher.com/podcast/arrested-devops-2/arrested-devops"
