--- a/themes/castanet/package.json
+++ b/themes/castanet/package.json
@@ -20,18 +20,18 @@
     "gulp": "~4.0.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-hub": "~4.2.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
-    "node-sass": "^4.13.1",
-    "require-dir": "~1.2.0"
+    "require-dir": "~1.2.0",
+    "sass": "^1.29.0"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "jssocials": "^1.5.0",
     "mediaelement": "^4.2.14",
     "mediaelement-plugins": "^2.5.0",
